PLANET-7665: Fix visual errors in the Search Results page
- Keep the same spacing in the search form.
- Avoid overlapping the title with the navigation on tablet devices.

--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -11,7 +11,6 @@
 
   input {
     font-size: $font-size-sm;
-    height: 2.75em;
     line-height: 2.75;
     appearance: none;
 
@@ -34,7 +33,6 @@
 
     @include large-and-up {
       font-size: 1.125rem;
-      height: 3em;
       line-height: 3;
     }
   }
@@ -48,11 +46,9 @@
     @include clear-input-styles;
     position: absolute;
     right: $sp-3;
-    top: 10px;
-
-    @include large-and-up {
-      top: $sp-2;
-    }
+    top: 0;
+    bottom: 0;
+    margin: auto;
 
     html[dir="rtl"] & {
       right: auto;
@@ -62,25 +58,18 @@
 
   .search-btn {
     font-size: $font-size-sm;
+    display: flex;
+    align-content: center;
+    align-items: center;
 
     svg {
       margin-right: 4px;
       vertical-align: baseline;
+      margin-top: -3px;
     }
 
-    // We need this margin exception for tablets because otherwise the button moves to 2 lines.
     @include medium-and-up {
-      svg {
-        margin-right: 0;
-      }
-    }
-
-    @include large-and-up {
-      margin-top: 2px;
-
-      svg {
-        margin-right: 4px;
-      }
+      margin-left: $sp-3;
     }
 
     i {
